# sentinel-bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  models.yaml  pyproject.toml  test_temp_file_contents.txt
.claude/: settings.local.json
.claude/agents/: advisor-overseer.md  docs-sync.md  project-retrospective.md  research-analyst.md
data/: agenda.md  identity.md
data/workspace/scripts/: task_63_20260128_021713.py  task_65_20260128_021807.py
docs/: README.md  adding-agents.md  agentic-cli-mvp.md  agents-memo.md  agents.md  architecture.md  interfaces.md  litellm-migration-plan.md  llm-cost-optimization.md  memory.md  memory_analysis.md  roadmap.md  safety.md  task_system.md  task_system_implementation.md  task_system_testing.md  tool-agents-mvp.md  tool_calling.md  tool_calling_design.md  tool_calling_implementation.md  vision-multimodal.md
src/sentinel/: __init__.py  cli.py
src/sentinel/agents/: __init__.py  agentic_cli.py  awareness.py  base.py  code.py  dialog.py  sleep.py  tool_agent.py
src/sentinel/agents/tool_agents/: __init__.py  weather.py
src/sentinel/configs/: __init__.py  curl_agent.py  models.yaml
src/sentinel/core/: __init__.py  agent_service.py  config.py  logging.py  orchestrator.py  tool_agent_registry.py  types.py  typing.py
src/sentinel/interfaces/: __init__.py  base.py  telegram.py
src/sentinel/llm/: __init__.py  base.py  base_old.py  claude.py  cost_tracker.py  litellm_adapter.py  local.py  openrouter.py  registry.py  router.py  router_old.py
src/sentinel/memory/: __init__.py  base.py  conversation_log.py  profile.py  store.py
src/sentinel/tasks/: __init__.py  executor.py  manager.py  parser.py  types.py
src/sentinel/tools/: __init__.py  base.py  executor.py  parser.py  registry.py
src/sentinel/tools/builtin/: __init__.py  agenda.py  delegation.py  system.py  tasks.py  web_search.py
src/sentinel/tools/decl/: __init__.py  file_agent.py
src/sentinel/workspace/: __init__.py  executor.py  manager.py  sandbox.py
tests/: __init__.py  conftest.py  test_agenda_tools.py  test_agent_capabilities_display.py  test_agent_service.py  test_agent_service_integration.py  test_auto_discovery.py  test_awareness.py  test_config.py  test_conversation_log.py  test_cost_tracker.py  test_dialog_tools.py  test_fts_search.py  test_graceful_shutdown.py  test_http_agent_registration.py  test_importance_scoring.py  test_litellm_migration.py  test_llm.py  test_memory.py  test_memory_command.py  test_orchestrator.py  test_registry.py  test_sleep_consolidation.py  test_tasks_manager.py  test_tasks_parser.py  test_telegram.py  test_telegram_formatting.py  test_tool_executor_logging.py  test_tool_markup_stripping.py  test_tools.py  test_types.py  test_user_profile.py  test_vision_context.py  test_web_search.py  test_workspace.py
tests/integration/: __init__.py  test_agenda_tools.py  test_agentic_cli.py  test_code_agent.py  test_dialog_agent.py  test_llm_providers.py  test_multi_agent_routing.py  test_task_system.py  test_tool_agents.py  test_tool_calling.py  test_vision.py  test_workspace_execution.py
