[project]
name = "sentinel"
version = "0.1.0"
description = "Self-evolving personal AI agents swarm"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "python-telegram-bot>=21.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20.0",
    "litellm>=1.81.5",
    "telegramify-markdown>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
local-llm = [
    "openai>=1.50.0",  # OpenAI-compatible API for local LLMs
]

[project.scripts]
sentinel = "sentinel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring real API keys (run with: pytest tests/integration)",
]
# Exclude integration tests by default
addopts = "--ignore=tests/integration -m 'not integration'"
filterwarnings = [
    # Ignore aiohttp deprecation warning about enable_cleanup_closed (fixed in Python 3.14)
    "ignore:enable_cleanup_closed ignored:DeprecationWarning:aiohttp.connector",
    # Ignore litellm coroutine not awaited warning
    "ignore:coroutine 'Logging.async_success_handler' was never awaited:RuntimeWarning",
    # Ignore litellm deprecation warning about asyncio.iscoroutinefunction
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning:litellm",
]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["typings"]

# 1.
ignore_missing_imports = true

# 2. Allow 'Any' types and dynamically typed code
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false

# 3. Loosen function definition requirements
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

# 4. Do not enforce strict Optional/None checks
strict_optional = false

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

# 5. Allow redefinition of variables
# allow_redefinition = true
